manifests/applications/cilium/gateway-api/shared-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared
  namespace: kube-system
spec:
  gatewayClassName: cilium
  
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/name: lb-cilium-gateway
      load-balancer.hetzner.cloud/use-private-ip: "true"
      load-balancer.hetzner.cloud/protocol: tcp
      load-balancer.hetzner.cloud/algorithm-type: round_robin
      load-balancer.hetzner.cloud/type: lb11
      load-balancer.hetzner.cloud/location: fsn1
      load-balancer.hetzner.cloud/uses-proxyprotocol: "false"

  listeners:
    # - protocol: HTTP
    #   port: 80
    #   name: toot-community-http
    #   hostname: toot.community
    #   allowedRoutes:
    #     namespaces:
    #       from: All

    # - protocol: HTTP
    #   port: 80
    #   name: wildcard-toot-community-http
    #   hostname: "*.toot.community"
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    # - protocol: HTTPS
    #   port: 443
    #   name: toot-community-https
    #   hostname: toot.community
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - group: ""
    #         kind: Secret
    #         name: toot-community-tls
    #   allowedRoutes:
    #     namespaces:
    #       from: All

    # - protocol: HTTPS
    #   port: 443
    #   name: wildcard-toot-community-https
    #   hostname: "*.toot.community"
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - group: ""
    #         kind: Secret
    #         name: toot-community-tls
    #   allowedRoutes:
    #     namespaces:
    #       from: All

    - protocol: HTTP
      port: 80
      name: microblog-network-http
      hostname: microblog.network
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 80
      name: wildcard-microblog-network-http
      hostname: "*.microblog.network"
      allowedRoutes:
        namespaces:
          from: All

    - protocol: HTTPS
      port: 443
      name: microblog-network-https
      hostname: microblog.network
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: microblog-network-tls
      allowedRoutes:
        namespaces:
          from: All

    - protocol: HTTPS
      port: 443
      name: wildcard-microblog-network-https
      hostname: "*.microblog.network"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: microblog-network-tls
      allowedRoutes:
        namespaces:
          from: All
